layout improved (nav fixed top left and content shifted four cols left)

--- a/documentation/assets/css/screen.css
+++ b/documentation/assets/css/screen.css
@@ -17,6 +17,12 @@ footer {
   position: relative;
 }
 
+nav {
+  left: 50px;
+  position: fixed;
+  top: 50px;
+}
+
 #main {
   padding-bottom: 100px;
 }
@@ -27,4 +33,12 @@ footer {
 
 #main-wrapper {
   padding-top: 70px;
+}
+
+#github {
+  border: 0;
+  left: 0;
+  position: fixed;
+  top: 0;
+  z-index: 1050;
 }
